Fix the category list font cutoff in Safari (#33505)

--- a/sass/homeassistant/_overrides.scss
+++ b/sass/homeassistant/_overrides.scss
@@ -690,6 +690,7 @@ article.listing {
     overflow-wrap: break-word;
 
     &.btn {
+      font-size: 1.1em;
       text-decoration: none;
       transition: box-shadow .33;
 
